force-app/main/default/objects/Firm_Approval__c/Firm_Approval__c.object-meta.xml
<CustomObject>
    <label>Firm Approval</label>
    <nameField>
        <label>Firm Approval</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firm Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>