force-app/main/default/objects/Firm_Approval__c/fields/ACDF_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ACDF_First_Name__c</fullName>
    <formula>Opportunity__r.ACDF_Fname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF First Name</label>
    <type>Text</type>
</CustomField>