force-app/main/default/objects/Firm_Approval__c/fields/ACDF_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Last_Name__c</fullName>
    <formula>Opportunity__r.ACDF_Lname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Last Name</label>
    <type>Text</type>
</CustomField>