force-app/main/default/objects/Firm_Approval__c/fields/Approval_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Approval_Deadline__c</fullName>
    <label>Approval Deadline</label>
    <type>Date</type>
</CustomField>