force-app/main/default/objects/Firm_Approval__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Candidate</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <color>#F3D904</color>
                <label>Qualified</label>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
                <color>#E27001</color>
                <label>Not Qualified</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <color>#3366FF</color>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#009900</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#990000</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>