force-app/main/default/objects/Firm_Approval__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <formula>Opportunity__r.Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate</label>
    <type>Text</type>
</CustomField>