force-app/main/default/objects/Firm_Approval__c/fields/Compliance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Contact__c</fullName>
    <formula>Opportunity__r.Compliance_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Contact</label>
    <type>Text</type>
</CustomField>