force-app/main/default/objects/Firm_Approval__c/fields/Compliance_First_name__c.field-meta.xml
<CustomField>
    <fullName>Compliance_First_name__c</fullName>
    <formula>Opportunity__r.Compliance_First_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance First name</label>
    <type>Text</type>
</CustomField>