force-app/main/default/objects/Firm_Approval__c/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Market Project</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Firm Approvals</relationshipLabel>
    <relationshipName>Firm_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>