force-app/main/default/objects/Firm_Approval__c/fields/Opportunity_Market__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Market__c</fullName>
    <formula>Opportunity__r.Market_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Market</label>
    <type>Text</type>
</CustomField>