force-app/main/default/objects/Firm_Approval__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <formula>Opportunity__r.Market_Project__r.Magazine_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication</label>
    <type>Text</type>
</CustomField>