force-app/main/default/objects/Firm_Approval__c/fields/Publication_Market__c.field-meta.xml
<CustomField>
    <fullName>Publication_Market__c</fullName>
    <formula>Opportunity__r.Market_Project__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Market</label>
    <type>Text</type>
</CustomField>