force-app/main/default/objects/Firm_Approval__c/fields/Publication_Month__c.field-meta.xml
<CustomField>
    <fullName>Publication_Month__c</fullName>
    <formula>Opportunity__r.Market_Project__r.Publication_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Month</label>
    <type>Text</type>
</CustomField>