force-app/main/default/objects/Firm_Approval__c/fields/Publication_Year__c.field-meta.xml
<CustomField>
    <fullName>Publication_Year__c</fullName>
    <formula>Opportunity__r.Market_Project__r.Publication_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Year</label>
    <type>Text</type>
</CustomField>