force-app/main/default/objects/Firm_Approval__c/fields/Sent_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Approval__c</fullName>
    <label>Sent for Approval</label>
    <type>Date</type>
</CustomField>