force-app/main/default/objects/Firm_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Publication_Market__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Firm_Approval_Type__c</columns>
    <columns>Compliance_Contact__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>