force-app/main/default/objects/Firm_Approval__c/listViews/All_Rejected.listView-meta.xml
<ListView>
    <fullName>All_Rejected</fullName>
    <columns>Approval_Status__c</columns>
    <columns>NAME</columns>
    <columns>Compliance_Contact__c</columns>
    <columns>Firm_Approval_Type__c</columns>
    <columns>Market_Project__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Publication_Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>All Rejected</label>
</ListView>